# torrent_downloader_front

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  main.py
app/database/: mongo.py
app/layout/: layout.py
app/layout/components/: card.py  file_tree.py  icons.py  seach_result.py  search_form.py
app/models/: mongo_docs.py  search_filters.py  search_item.py
app/repositories/: torrent_repository.py
app/routes/: search.py
app/services/: search_service.py
app/static/css/: new_style.css  style.css
